# JET_SKI

./: .gitignore  README.md  docker-compose.yml
.continue/: permissions.yaml
.continue/rules/: new-rule.md
backend/: manage.py  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/core/: models.py
backend/core/api/: public.py
backend/core/migrations/: 0001_initial.py
backend/core/tests/: test_booking_creation.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/book/: page.tsx
