[project]
name = "jetski-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "Django>=5.0",
  "django-ninja>=1.1.0",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "Pillow>=10.0",
  "pytest>=8.0",
  "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
